use java.time.DayOfWeek instead of integer